--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+}
+html{
+  font-size: 62,5%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App{
+  background-color: #664b92;
   min-height: 100vh;
   display: flex;
+}
+
+.quote{
+  margin: auto;
+  width: 100%;
+  max-width: 600px;
+  min-height: 180px;
+  height: auto;
+  padding: 30px;
+  background: #333;
+  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  align-items: flex-start;
+  border-radius: 10px;
+  box-shadow: 8px 20px 3px rgba(0, 0, 0, 0.5);
+  
+}
+
+p{
+  font-size: 1.2rem;
   color: white;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+button{
+  border: none;
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a{
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+}
+
+.btn{
+  background-color: #6b68ff;
+  width: 80px;
+  height: 30px;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  transition:all 700ms ease-in-out;
 }
